Fix spacing for welcoming text

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ a {
   width: 100%;
   position: absolute;
   text-align: right;
-  top: 450px;
+  top: 150px;
   padding-right: 50px;
   z-index: 2;
   color: #fff;
@@ -62,7 +62,7 @@ a {
   width: 100%;
   position: absolute;
   text-align: right;
-  top: 330px;
+  top: 430px;
   padding-right: 50px;
   z-index: 2;
   color: #fff;
